--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -50,10 +50,22 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:gravity="start"
+            android:text="@string/published_date"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@id/tv_item_title"
-            app:layout_constraintTop_toBottomOf="@id/tv_item_title"
-            android:text="@string/published_date"/>
+            app:layout_constraintTop_toBottomOf="@id/tv_item_title" />
+
+        <ImageView
+            android:id="@+id/iv_bookmark"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:contentDescription="@string/save_bookmark"
+            android:src="@drawable/ic_bookmark_white"
+            android:tag="Not Saved"
+            app:layout_constraintStart_toStartOf="@id/img_poster"
+            app:layout_constraintTop_toTopOf="@+id/img_poster" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
